# grw-no-llm

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  shared_state.rs  ui.rs
src/git/: mod.rs  worker.rs
src/pane/: commit_summary_pane.rs  help_pane.rs  keys.rs  mod.rs
