[package]
name = "grw"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
git2 = { version = "0.19", default-features = false, features = ["https"] }
color-eyre = "0.6"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
scc = "2.1"
textwrap = "0.16"
unicode-segmentation = "1.12.0"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
git2 = { version = "0.19", default-features = false, features = ["https"] }
